<resources>
    <string name="app_name">회식이(식당)</string>
    <string name="login_activity_text">효율적인 마케팅 방법으로 식당에 손님을 끌어모아 보세요!</string>
    <string name="login_activity_button">구글 계정으로 시작하기</string>
    <string name="join_activity_title">식당 정보 입력</string>
    <string name="text_restraurant_name">식당 이름</string>
    <string name="admin_name_help">고객님들에게 보여지는 식당의 이름을 입력해주세요.</string>
    <string name="text_phone">전화번호</string>
    <string name="phone_help">고객님과 연락이 가능한 전화번호를 입력해주세요.</string>
    <string name="text_join_agree">입력하신 정보는 견적서에 함께 등록되며 고객에게 제공됩니다.</string>
    <string name="text_i_agree">동의합니다</string>
    <string name="text_join">회원가입</string>
    <string name="text_location">위치</string>
    <string name="tab_title_application">신청서</string>
    <string name="tab_title_estimate">견적서</string>
    <string name="tab_title_contact">계약서</string>
    <string name="text_image_title">대표사진</string>
    <string name="text_image_title_help">사진을 선택하려면 클릭하세요.</string>
    <string name="text_style">분위기</string>
    <string name="admin_style_help">식당의 분위기를 나타낼 수 있는 선택해주세요.</string>
    <string name="text_menu">대표메뉴</string>
    <string name="text_menu_help">식당에서 대표로하는 메뉴와 가격을 입력해주세요.</string>
    <string name="text_cost">가격</string>
    <string name="text_location_help">매장의 위치를 표시해주세요.</string>
    <string name="text_apply_content">인원: %1$d명\n시간: %2$s\n위치: %3$skm</string>
    <string name="text_contacted">계약됨</string>
    <string name="text_waiting">대기중</string>
    <string name="text_canceled">취소됨</string>
    <string name="text_failed">실패함</string>
    <string name="text_estimate_list_title">%1$s님께 보낸 견적서</string>
    <string name="text_estimate_list_writed_time">작성 시간: %1$s</string>
    <string name="text_send_estimate">견적서 보내기</string>
    <string name="text_apply_detail_name">%1$s님의 신청서</string>
    <string name="text_apply_detail_number">%1$d명</string>
    <string name="text_alert_dialog_title">알림</string>
    <string name="text_alert_send_estimate">견적서를 보내면 신청자에게 알림이 가며 내용을 수정할 수 없습니다. 정말로 보내시겠습니까?</string>
    <string name="apply_detail_activity_title">신청서 내용</string>
    <string name="contact_detail_activity_title">계약서 내용</string>
    <string name="user_name">%1$s님</string>
    <string name="text_contact_list_subtitle">신청 시간: %1$s\n계약 시간: %2$s</string>
    <string name="text_contact_apply_title">신청서 내용</string>
    <string name="text_contact_estimate_title">견적서 내용</string>
    <string name="text_contact_contact_title">계약 내용</string>
    <string name="text_contact_contact_detail">계약 시간: %1$s</string>
    <string name="text_number">인원</string>
    <string name="text_wanted_time">시간</string>
    <string name="text_wanted_style">원하는 분위기</string>
    <string name="text_wanted_menu">원하는 메뉴</string>
    <string name="text_select_this">이 곳으로 선택</string>
    <string name="write_estimate_activity_title">견적서 작성</string>
    <string name="snack_name_length">이름은 4글자 이상입니다.</string>
    <string name="snack_phone">전화번호 형식이 잘못되었습니다.</string>
    <string name="snack_style_select">분위기를 선택해주세요.</string>
    <string name="snack_menu_input">대표 메뉴를 입력해주세요.</string>
    <string name="snack_menu_cost">메뉴의 가격을 입력해주세요.</string>
    <string name="drawer_open">메뉴 열림</string>
    <string name="drawer_close">메뉴 닫힘</string>
    <string name="text_application_name">%1$s님의 신청서</string>
    <string name="people_count">%1$d명</string>
    <string name="default_date">yyyy.MM.dd HH:mm</string>
    <string name="distance_kilo">약 %.2fkm</string>
    <string name="person_number">%1$d명</string>

    <string name="kakao_app_key">da3852fe468833c3e1c9d83859b3ada1</string>
    <string name="facebook_app_id">1920252784901809</string>
    <string name="fb_login_protocol_scheme">fb1920252784901809</string>
    <string name="nav_logout">로그아웃</string>
    <string name="estimate_content">견적서 내용</string>
    <string name="help_estimate_send">견적서의 내용은 고객에게 전달되며 사실만을 작성해주시기 바랍니다.</string>
    <string name="application_time">신청서 시간</string>
    <string name="estimate_time">견적서 시간</string>
    <string name="contact_time">계약 시간</string>
    <string name="default_time_pattern">yyyy.MM.dd HH:mm</string>
    <string name="help_empty">데이터가 존재하지 않습니다!</string>

    <string name="email_sign_up_email_help">비밀번호를 잊었을 때 찾는 용도로 사용합니다.</string>
    <string name="email_sign_up_email">이메일</string>
    <string name="email_sign_up_password">비밀번호</string>
    <string name="email_sign_up_password_help">비밀번호는 8자리 이상입니다.</string>
    <string name="email_sign_up_password_confirm">비밀번호 확인</string>
    <string name="email_sign_up_password_confirm_help">동일한 비밀번호를 한번더 입력해주세요.</string>
    <string name="text_prev">이전</string>
    <string name="text_next">다음</string>
    <string name="detail_view">자세히 보기</string>
    <string name="message_content">메시지 내용</string>
    <string name="application_location">신청서의 위치</string>
    <string name="admin_location">식당의 위치</string>
    <string name="admin_phone">식당의 전화번호</string>
    <string name="estimate_message">견적서 메시지</string>
    <string name="client_phone">고객의 전화번호</string>
    <string name="send">보내기</string>
    <string name="email_sign_up">이메일 등록</string>
    <string name="select">선택</string>
    <string name="dialog_alert_title">알림</string>
    <string name="need_gps_on_help">지도를 현재 위치로 맞추기 위해서 GPS기능을 켜야합니다. 설정화면으로 이동하시겠습니까?</string>
    <string name="fail_to_load_estimates">견적서 목록을 불러오는데 실패하였습니다</string>
    <string name="fail_to_load_contacts">계약서 목록을 불러오는데 실패하여 기존 목록을 가져옵니다</string>
    <string name="nav_account">계정 설정</string>
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="login">로그인</string>
    <string name="login_email">일반 이메일로 로그인</string>
    <string name="login_by_facebook">페이스북으로 로그인</string>
    <string name="login_by_kakao">카카오 계정으로 로그인</string>
    <string name="not_exist_email_or_password">일치하는 이메일이 존재하지 않거나 비밀번호가 틀렸습니다</string>
    <string name="account">계정</string>
    <string name="general">일반</string>
    <string name="app_settings">앱 설정</string>
    <string name="help">도움말</string>
    <string name="show_all">전체보기</string>
    <string name="show_waiting">대기중 목록</string>
    <string name="show_contacted">계약된 목록</string>
    <string name="show_canceled">취소된 목록</string>
    <string name="admin_name">식당 이름</string>
    <string name="admin_image">식당 사진</string>
    <string name="admin_image_help">식당을 대표하는 이미지를 지정합니다. 클릭하면 선택할 수 있습니다.</string>
    <string name="main_menu">대표 메뉴</string>
    <string name="add_image">이미지 추가</string>
    <string name="image_max_10">이미지(최대 10장)</string>
    <string name="do_save">저장하기</string>
    <string name="account_activity_title">계정 설정</string>
    <string name="image_select_tool">이미지 선택 도구</string>
    <string name="admin_style">식당 분위기</string>
    <string name="empty_input_text">입력창이 비어있습니다.</string>
    <string name="account_settings">계정 설정</string>
    <string name="not_exist_application">올라온 신청서가 없습니다!</string>
    <string name="not_exist_estimates">작성한 견적서가 아직 없네요!</string>
    <string name="not_exist_contacts">아직 계약하신 적이 없으시군요!</string>
    <string name="refresh">새로고침</string>
    <string name="review">리뷰</string>
    <string name="to">To.</string>
    <string name="from">From.</string>
    <string name="open_source_license">오픈소스 라이선스</string>
    <string name="cancel">취소</string>
    <string name="please_select_style">분위기를 선택해주세요</string>

    <plurals name="menu_cost">
        <item quantity="many">%d원</item>
        <item quantity="other">%d원</item>
    </plurals>
</resources>
