<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:focusable="true"
        android:focusableInTouchMode="true" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:titleTextColor="@color/white"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <com.rengwuxian.materialedittext.MaterialEditText
                style="@style/MaterialEditText"
                android:id="@+id/edit_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/admin_name"
                android:inputType="textPersonName"
                android:maxLines="1"
                app:met_helperText="@string/admin_name_help"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                style="@style/MaterialEditText"
                android:id="@+id/edit_phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/text_phone"
                android:inputType="phone"
                android:maxLines="1"
                app:met_helperText="@string/phone_help"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_name"/>

            <TextView
                android:id="@+id/text_admin_picutre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/admin_image"
                android:textSize="@dimen/fontSmall"
                android:textColor="@color/grey"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_phone"/>

            <ImageView
                android:id="@+id/image_admin_image"
                android:layout_width="0dp"
                android:layout_height="200dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_admin_picutre"/>

            <TextView
                android:id="@+id/text_admin_image_help"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/admin_image_help"
                android:textSize="@dimen/fontSmall"
                android:textColor="@color/grey"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image_admin_image"/>

            <TextView
                android:id="@+id/text_admin_style_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/admin_image"
                android:textSize="@dimen/fontSmall"
                android:textColor="@color/grey"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_admin_image_help"/>

            <LinearLayout
                android:id="@+id/linear"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_admin_style_title">

                <TextView
                    android:id="@+id/text_admin_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="@dimen/fontNormal"
                    android:textColor="@color/black"/>

                <Button
                    android:id="@+id/button_admin_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/select"
                    android:textSize="@dimen/fontNormal"
                    android:textColor="@color/grey"
                    android:background="@drawable/background_rectangle_button_primary"/>
            </LinearLayout>

            <TextView
                android:id="@+id/text_admin_style_help"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/admin_style_help"
                android:textSize="@dimen/fontSmall"
                android:textColor="@color/grey"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/linear"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                style="@style/MaterialEditText"
                android:id="@+id/edit_menu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/main_menu"
                android:inputType="text"
                android:maxLines="1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_admin_style_help"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                style="@style/MaterialEditText"
                android:id="@+id/edit_menu_cost"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/text_cost"
                android:inputType="numberDecimal"
                android:maxLines="1"
                app:met_helperText="@string/text_menu_help"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_menu"/>

            <Button
                android:id="@+id/button_add_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/add_image"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/fontNormal"
                android:background="@drawable/background_rectangle_button_primary"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_menu_cost"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/image"
                android:textColor="@color/grey"
                android:textSize="@dimen/fontSmall"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/button_add_image"
                app:layout_constraintTop_toTopOf="@id/button_add_image"
                app:layout_constraintBottom_toBottomOf="@id/button_add_image"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_image"
                android:layout_width="0dp"
                android:layout_height="300dp"
                android:layout_marginTop="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/button_add_image"/>
        </android.support.constraint.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/do_save"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/fontNormal"
        android:background="@drawable/background_rectangle_button_primary"/>
</LinearLayout>